# LionLock_FDE_OSS

./: .env.example  .gitignore  AUDIT_REPORT.md  NOTICE  README.md  VENV_REDIRECT_POLICY.yaml.md  lionlock.toml.example  new_files_log.txt  pyproject.toml
.github/: dependabot.yml
docs/: AUDIT_LOGGING.md  CONTRIBUTING.md  GATING_POLICY.md  MODULE_06_REPLAY.md  QUICKSTART.md  SECURITY.md  USAGE.md  module06_artifacts_manifest.json  trust_overlay_schema.json
examples/: __init__.py  quickstart.py
scripts/: log_token_tool.py  trust_overlay_smoke.py  venv_guard.sh
tests/: conftest.py  test_anomaly_module_03.py  test_gating_config_override.py  test_logger.py  test_module05_derived_influence.py  test_module05_end_to_end_sql.py  test_module05_evaluate_policy_api.py  test_module05_vocabulary.py  test_module06_labels_join.py  test_module06_policy_registry.py  test_module06_replay_determinism.py  test_module06_security_checks.py  test_module06_writeback_optin.py  test_module07_standard_determinism.py  test_privacy_guard.py  test_prompt4_schema.py  test_public_telemetry.py  test_public_telemetry_persistence.py  test_quickstart_fixtures.py  test_scoring_fatigue.py  test_signal_payload_validation.py  test_sql_module05_events_insert.py  test_sql_module05_missed_signal_insert.py  test_sql_module4_init_and_leakage.py  test_token_auth.py  test_trust_overlay_engine.py  test_trust_overlay_logger.py  test_trust_overlay_schema.py  test_trust_overlay_smoke_script.py  test_trust_overlay_sql.py  test_trust_overlay_versioning.py
tools/: README.md  ci_local.sh  dev_setup.sh  lockdown.sh  (+12 more)
(+51 files in other folders)
