[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "lionlock"
version = "0.1.0"
description = "Minimal open-source fatigue logging utilities for LionLock."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "LionLock Maintainers" }]
dependencies = [
  "tomli>=2.0.0; python_version < \"3.11\"",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "build>=1.0.0",
  "twine>=5.0.0",
  "pip-audit>=2.7.0",
  "streamlit>=1.40",
]
gui = [
  "streamlit>=1.40",
]
failsafe = [
  "cryptography>=42",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
exclude = ["archive", ".venv", "venv", "build", "dist"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
